<resources>
    <string name="app_name">Way to Cod</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login_to_continue">Login to continue with PhonePe</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_other">or register with a new mobile number</string>
    <string name="register">Create a New Account ?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="todo">TODO</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_location">Enter Location</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="nachos_super">Nachos Super</string>
    <string name="item_content">We provide bast service for your dinner food</string>
    <string name="item_price">$ 200</string>
    <string name="fantasy_hunt">Fantasy Hunt</string>
    <string name="our_menu">our menu</string>
    <string name="cock_request">We provide best services for your Breakfast,Lunch,dinner food</string>
    <string name="order_food">order food</string>
    <string name="find_a_bed">find a bed</string>
    <string name="reserve_a_table">Reserve a table</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="item">Item</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="reservations">Reservations</string>
    <string name="count">Count</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_count">Enter Count</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="call">Call</string>
    <string name="typing">Typing...</string>
    <string name="name">Name</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation_darwar">NavigationDarwarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_gallery_fragment">Hello gallery fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_slide_show_fragment">Hello slide show fragment</string>
    <string name="enter_email">Enter Email</string>

    <string name="linear_definition">LinearLayout is a view group that aligns all children in a single direction, vertically or horizontally. You can specify the layout direction with the android:orientation attribute.</string>
    <string name="fragment_definition">Fragments Part of Android Jetpack. A Fragment represents a behavior or a portion of user interface in a FragmentActivity . You can combine multiple fragments in a single activity to build a multi-pane UI and reuse a fragment in multiple activities</string>
    <string name="intent_definition"> An Intent is a messaging object you can use to request an action from another app component. Although intents facilitate communication between components in several ways, there are three fundamental use cases: Starting an activity. An Activity represents a single screen in an app.</string>
    <string name="recycler_definition">RecyclerView is a ViewGroup added to the android studio as a successor of the GridView and ListView. It is an improvement on both of them and can be found in the latest v-7 support packages.</string>
    <string name="imageView_definition">An ImageView control is used to display images in Android applications. An image can be displayed by assigning it to the ImageView control and including the android:src attribute in the XML definition of the control. ... You do not need to specify the image file extension.</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_navigation_recycler">NavigationRecyclerActivity</string>
    <string name="title_activity_nav_andn_rec">NavAndnRecActivity</string>
    <string name="title_activity_nav_and_rec">NavAndRecActivity</string>
    <string name="title_activity_nand_r">NandRActivity</string>
    <string name="click_delete">Click Delete</string>
    <string name="long_press_delete">Long press Delete</string>
    <string name="swap_delete">Swap Delete</string>
    <string name="tab_data_send">Tab data Send</string>
    <string name="logout">logout</string>
    <string name="facebook_app_id">793159974751319</string>
    <string name="fb_login_protocol_scheme">fb793159974751319</string>
    <string name="news_title">News Title</string>
    <string name="title_activity_bottom_componet">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="check_internet_permission">check internet permission</string>
    <string name="vibration_on">Vibration On</string>
    <string name="vibration_off">Vibration Off</string>
    <string name="fragment">fragment</string>
</resources>