<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_phonepe" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/welcome_back"
                android:textColor="@color/colorPhonePe"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/login_to_continue"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/enter_phone_number"
                android:inputType="textEmailAddress"
                android:maxLength="10"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="12"
                android:minLines="1"
                tools:ignore="Autofill"
                android:drawableLeft="@drawable/ic_password" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/colorPhonePe"
                android:text="@string/login"
                android:textColor="@color/colorWhite" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_register"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/register"
                android:textColor="@color/colorPhonePe" />
            <!--<view
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:textColor="@color/colorGray" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/login_to_continue"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/login_other"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPhonePe"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>