<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    android:orientation="vertical"
    tools:context=".intentTask.LoginTaskActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_phonepe" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/welcome_back"
                android:textColor="@color/colorPhonePe"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/login_to_continue"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

</androidx.cardview.widget.CardView>
            <EditText
                android:id="@+id/etdPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:backgroundTint="@color/colorWhite"
                android:drawableLeft="@drawable/ic_phonenumber"
                android:drawablePadding="10dp"
                android:hint="@string/enter_phone_number"
                android:inputType="textEmailAddress"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/etdPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:backgroundTint="@color/colorWhite"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="12"
                android:minLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPhonePe"
                android:textSize="16sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@color/colorPhonePe"
                android:text="@string/login"
                android:padding="20dp"
                android:textColor="@color/colorWhite" />


            <!--<view
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:textColor="@color/colorGray" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/login_to_continue"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/login_other"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />



            <TextView
                android:id="@+id/btnRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_20dp"

                android:text="@string/register"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>