<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sherePreftask.SherePrefLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/colorPhonePe"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etdPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/enter_password"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorPhonePe"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="forgot ?"
        android:textColor="@color/colorPhonePe"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="@color/colorPhonePe"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>