<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".relative.ReservationsActivity">

    <include layout="@layout/apptoolbar" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPhonePe"
        android:paddingLeft="@dimen/dimens_20dp"
        android:paddingTop="@dimen/dimens_10dp"
        android:paddingBottom="@dimen/dimens_10dp"
        android:text="@string/reservations"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimens_24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimens_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dimens_5dp"
            android:text="@string/reservations"
            android:textSize="@dimen/dimens_18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border"
            android:hint="@string/enter_name"
            android:padding="@dimen/dimens_10dp"
            android:textColor="@color/colorPhonePe"
            android:textColorHint="@color/colorPhonePe" />

        <TextView
            android:id="@+id/txtCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:padding="@dimen/dimens_5dp"
            android:text="@string/count"
            android:textSize="@dimen/dimens_18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border"
            android:hint="@string/enter_count"
            android:padding="@dimen/dimens_10dp"
            android:textColor="@color/colorPhonePe"
            android:textColorHint="@color/colorPhonePe" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:padding="@dimen/dimens_5dp"
            android:text="@string/date"
            android:textSize="@dimen/dimens_18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border"
            android:hint="DD/MM/YYYY"
            android:padding="@dimen/dimens_10dp"
            android:textColor="@color/colorPhonePe"
            android:textColorHint="@color/colorPhonePe" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:padding="@dimen/dimens_5dp"
            android:text="@string/time"
            android:textSize="@dimen/dimens_18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border"
            android:hint="00:00"
            android:padding="@dimen/dimens_10dp"
            android:textColor="@color/colorPhonePe"
            android:textColorHint="@color/colorPhonePe" />

        <TextView
            android:id="@+id/txtTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:drawableLeft="@drawable/ic_add"
            android:drawablePadding="@dimen/dimens_5dp"
            android:padding="@dimen/dimens_5dp"
            android:text="Add a special "
            android:textSize="@dimen/dimens_16sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:background="@drawable/btn_register"
            android:text="Confirm Reservations"
            android:textColor="@color/colorPhonePe"
            android:textSize="@dimen/dimens_20dp" />


    </LinearLayout>

</LinearLayout>